# WebScrapping-using-Rag

./: .gitignore  dev.env  main.py  pyproject.toml  requirement.txt  test.ipynb
