[project]
name = "webscrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.1",
    "lxml>=6.0.2",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
]

[tool.uv.workspace]
members = [
    "venv",
]
